--- a/code/app/andriod/Laundry/res/values/color.xml
+++ b/code/app/andriod/Laundry/res/values/color.xml
@@ -24,6 +24,8 @@
 	<color name="selectedcolor">#F6AB00</color>
 	
     <color name="grid_back_color">#F0F0F0</color>
-	
+    <color name="blue_light">#FF179dc5</color>
+    <color name="red_notice">#FFd90707</color>
+
 	
 	</resources>
