--- a/code/app/andriod/Laundry/res/layout/cart_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_fragment.xml
@@ -1,137 +1,188 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@color/backcolor"
-    android:orientation="vertical" >
+    android:background="@color/backcolor" >
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/misp_tilte_layout" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/basketlogo" />
+        </FrameLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/tabbarback"
+            android:padding="10dp" >
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginLeft="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="0.8"
+                android:background="@color/blue_light"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="洗涤名称"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1"
+                android:background="@color/blue_light"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="单价"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1"
+                android:background="@color/blue_light"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="数量"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1"
+                android:background="@color/blue_light"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="合计"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1.1"
+                android:background="@color/blue_light"
+                android:gravity="center"
+                android:padding="8dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+        </LinearLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/top_head_height"
-        android:layout_marginBottom="20dp"
-        android:background="@color/themecolor" >
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_centerHorizontal="true"
+       >
+
+        <ListView
+            android:id="@+id/chart_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+            android:id="@+id/chart_total_price"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="洗衣篮"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:text="已选物品总共9件共计506元"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/white"
-            android:textSize="@dimen/head_font_size_sm" />
-    </RelativeLayout>
- 
+            android:textColor="@color/red_notice"
+            android:textSize="14sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp" >
 
-            <LinearLayout
+            <Button
+                android:id="@+id/cart_to_product"
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:orientation="vertical" >
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_disabled"
+                android:padding="10dp"
+                android:text="继续添加" />
 
-                <ListView
-                    android:id="@+id/chart_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-                </ListView>
-            </LinearLayout>
-
-            <LinearLayout
+            <Button
+                android:id="@+id/cart_submit"
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:orientation="vertical" >
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <LinearLayout
-                        android:id="@+id/LinearLayout1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="20dp"
-                        android:orientation="horizontal"
-                        android:padding="10dp" >
-
-                        <TextView
-                            android:id="@+id/chart_total_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="3"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/content_font_size" />
-
-                        <TextView
-                            android:id="@+id/cart_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="件物品，总计："
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/content_font_size" />
-
-                        <TextView
-                            android:id="@+id/chart_total_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:text="￥466.00"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textColor="@color/focuscolor"
-                            android:textSize="@dimen/content_font_size" />
-                    </LinearLayout>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginBottom="10dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp" >
-
-                    <Button
-                        android:id="@+id/cart_submit"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:background="@drawable/common_btn"
-                        android:text="下一步"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/content_font_size" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginBottom="10dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp" >
-
-                    <Button
-                        android:id="@+id/cart_to_product"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:background="@drawable/common_btn"
-                        android:text="添加衣物"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/content_font_size" />
-                </RelativeLayout>
-
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_light_blue"
+                android:padding="10dp"
+                android:textColor="@color/theme_text_color"
+                android:text="确认提交" />
         </LinearLayout>
+    </LinearLayout>
 
-  
-</LinearLayout>
+</RelativeLayout>
