--- a/code/app/andriod/Laundry/res/layout/cart_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_list_item.xml
@@ -1,83 +1,90 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="horizontal"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp" >
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_weight="0.35" >
-
-        <TextView
-            android:id="@+id/chart_list_item_name"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_weight="0.5"
-            android:text="衣物名称"
-            android:textColor="@color/black"
-            android:textSize="@dimen/content_font_size" />
-    </RelativeLayout>
+            android:background="@color/black" >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.45"
-        android:gravity="center_vertical|center_horizontal" >
+            <TextView
+                android:id="@+id/chart_list_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginLeft="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="0.8"
+                android:background="@color/grid_back_color"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="一堆衣服"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/chart_list_item_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="价格"
-            android:textColor="@color/black"
-            android:textSize="@dimen/content_font_size" />
+            <TextView
+                android:id="@+id/chart_list_item_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1"
+                android:background="@color/grid_back_color"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="260元"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/chart_list_item_quantity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1"
+                android:background="@color/grid_back_color"
+                android:gravity="center"
+                android:padding="8dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_weight="0.5" >
+            <TextView
+                android:id="@+id/chart_list_item_tatol_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1"
+                android:background="@color/grid_back_color"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="260元"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
-        <EditText
-            android:id="@+id/chart_list_item_quantity"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:layout_weight="0.5"
-            android:background="@drawable/edittext_sel"
-            android:ems="2"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:gravity="center_vertical|center_horizontal"
-            android:inputType="number"
-            android:text="1"
-            android:textColor="@color/black"
-            android:textSize="@dimen/content_font_size" />
+            <Button
+                android:id="@+id/char_list_item_btn_delete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0.5dp"
+                android:layout_marginRight="0.5dp"
+                android:layout_marginTop="0.5dp"
+                android:layout_weight="1.1"
+                android:background="@drawable/cancel"
+                android:gravity="center"
+                android:padding="8dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_weight="0.5" >
-
-        <Button
-            android:id="@+id/char_list_item_btn_delete"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_weight="0.5"
-            android:background="@drawable/btn_del_img" />
-
-    </RelativeLayout>
-
-</LinearLayout>
+        </LinearLayout>
+</RelativeLayout>
