--- a/code/app/andriod/Laundry/res/layout/order_confirm.xml
+++ b/code/app/andriod/Laundry/res/layout/order_confirm.xml
@@ -46,9 +46,11 @@
         </LinearLayout>
 
          <ListView
-            android:id="@+id/misp_info_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+             android:id="@+id/misp_info_list"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:divider="@null" >
+
         </ListView>
  
 
@@ -60,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical" >
 
         <TextView
