--- a/code/app/andriod/Laundry/res/layout/order_confirm_largetext_item.xml
+++ b/code/app/andriod/Laundry/res/layout/order_confirm_largetext_item.xml
@@ -4,30 +4,18 @@
     android:background="@color/backcolor" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp" >
-
-            <TextView
-                android:id="@+id/item_btntype_name"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_light_blue"
-                android:gravity="center"
-                android:paddingBottom="5dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="5dp"
-                android:text="订单信息"
-                android:textColor="@color/white" />
+            android:layout_marginTop="5dp"
+            android:orientation="vertical" >
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp" >
+                android:layout_marginBottom="5dp" >
 
                 <TextView
                     android:id="@+id/TextView02"
@@ -40,16 +28,30 @@
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/item_btntype_value"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/item_btntype_name"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:text="订单信息详情qi八九十一二三"
-                    android:textColor="@color/black"
-                    android:textSize="12dp" />
+                    android:background="@drawable/btn_light_blue"
+                    android:gravity="center"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:text="订单信息"
+                    android:textColor="@color/white" />
 
             </RelativeLayout>
+            <EditText
+                android:id="@+id/item_btntype_value"
+                style="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:inputType="textMultiLine"
+                android:lines="5"
+                android:textSize="12sp">
+                <requestFocus />
+            </EditText>
 
         </LinearLayout>
  
