--- a/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
@@ -10,13 +10,26 @@
         android:layout_height="40dp"
         android:background="@color/white"
         android:padding="@dimen/list_item_margin" >
- 
-        <TextView
-            android:id="@+id/item_texttype_name"
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/content_text_color"
-            android:textColorHint="@android:color/black" />
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/ImageView02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="center"
+                />
+
+            <TextView
+                android:id="@+id/item_texttype_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/content_text_color"
+                android:textColorHint="@android:color/black" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/item_texttype_text"
