加图产品图片

--- a/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content" >
 
             <ImageView
-                android:id="@+id/ImageView02"
+                android:id="@+id/misp_icon_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="center"
