--- a/code/app/andriod/Laundry/res/layout/misp_list_item_btntype.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_list_item_btntype.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/item_backgroud"
+    android:background="@color/backcolor"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_gravity="center_vertical"
+        android:layout_marginBottom="1dp"
         android:background="@color/white" >
 
         <TextView
@@ -17,8 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-    
+            android:layout_marginLeft="20dp"
             android:textColor="@color/black" />
 
         <LinearLayout
