--- a/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
@@ -1,33 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/item_backgroud"
+    android:layout_height="wrap_content"
+    android:background="@color/backcolor"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="1dp"
         android:background="@color/white"
-        android:padding="@dimen/list_item_margin" >
+        android:gravity="center" >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-            <ImageView
-                android:id="@+id/misp_icon_img"
+            <RelativeLayout
+                android:id="@+id/misp_icon_img_view"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="center"
-                />
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:visibility="gone" >
+
+                <ImageView
+                    android:id="@+id/misp_icon_img"
+                    style="@style/AppBaseTheme"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_centerInParent="true"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    android:visibility="visible" />
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/item_texttype_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
                 android:textColor="@color/content_text_color"
-                android:textColorHint="@android:color/black" />
+                android:textColorHint="@android:color/black"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -37,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
             android:text=""
             android:textColor="@color/content_text_color"
             android:textColorHint="@android:color/black" >
