--- a/code/app/andriod/Laundry/res/layout/misp_modify_password.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_modify_password.xml
@@ -10,13 +10,13 @@
         android:layout_height="wrap_content"
         layout="@layout/misp_tilte_with_save_layout" />
  
-
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:fillViewport="true" >
-
  
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,65 +26,60 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/misp_old_password" />
 
                 <EditText
                     android:id="@+id/misp_old_password_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:ems="10"
-                    android:inputType="textPassword" />
+                    android:hint="原密码"
+                    android:inputType="textPassword"
+                    android:padding="15dp"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
                 android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/misp_new_password" />
 
                 <EditText
                     android:id="@+id/misp_new_password_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:ems="10"
-                    android:inputType="textPassword" />
+                    android:hint="新密码"
+                    android:inputType="textPassword"
+                    android:padding="15dp"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/misp_confirm_password" />
 
                 <EditText
                     android:id="@+id/misp_confirm_password_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:ems="10"
-                    android:inputType="textPassword" />
+                    android:hint="确认密码"
+                    android:inputType="textPassword"
+                    android:padding="15dp"
+                    android:textSize="14sp" />
 
             </LinearLayout>
- 
         </LinearLayout>
- 
  
     </ScrollView>
 
