--- a/code/app/andriod/Laundry/res/layout/misp_tilte_with_save_layout.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_tilte_with_save_layout.xml
@@ -5,68 +5,46 @@
     android:background="@color/backcolor"
     android:orientation="vertical" >
 
-<LinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/tabbar_height"
-    android:background="@color/themecolor"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/title_margin" >
+    android:background="@color/themecolor" >
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+    <Button
+        android:id="@+id/misp_title_back"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_centerVertical="true"
+        android:background="@null"
+        android:drawableLeft="@drawable/detail_back"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="@string/misp_back"
+        android:textColor="@color/theme_text_color"
+        android:textSize="@dimen/top_head_btn_size" />
 
-            <Button
-                android:id="@+id/misp_title_back"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:background="@null"
-                android:drawableLeft="@drawable/detail_back"
-                android:text="@string/misp_back"
-                android:textColor="@color/theme_text_color"
-                android:textSize="@dimen/top_head_btn_size" />
-        </LinearLayout>
+    <TextView
+        android:id="@+id/misp_title_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textColor="@color/theme_text_color"
+        android:textSize="@dimen/top_head_title_font_size" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="2.5"
-            android:orientation="vertical" >
+    <Button
+        android:id="@+id/misp_title_save"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@null"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="@string/misp_save"
+        android:textColor="@color/theme_text_color"
+        android:textSize="@dimen/top_head_btn_size" />
 
-                    <TextView
-                        android:id="@+id/misp_title_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text=""
-                        android:textColor="@color/theme_text_color"
-                        android:textSize="@dimen/top_head_title_font_size" />
-
-         </LinearLayout>    
-
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center"
-           android:layout_weight="1"
-           android:gravity="center"
-           android:orientation="vertical" >
- 
-            <Button
-                android:id="@+id/misp_title_save"
-                
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:background="@null"
-                android:text="@string/misp_save"
-                android:textColor="@color/theme_text_color"
-                android:textSize="@dimen/top_head_btn_size" />
-        </LinearLayout>   
-    </LinearLayout>
-
+</RelativeLayout>
  
 </LinearLayout>
