--- a/code/app/andriod/Laundry/res/layout/order_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/order_list_item.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/backcolor"
+    android:paddingBottom="1dp" >
+
+<LinearLayout
     android:id="@+id/home_list_item_all"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -98,4 +104,7 @@
 
     </LinearLayout>
 
+
+ 
 </LinearLayout>
+   </RelativeLayout>
